@@ -12,7 +12,7 @@ from .section import Section
 from .option import Option
 from . import exceptions, validators
 
-__version__ = '0.0.5'
+__version__ = '0.1.1'
 
 __all__ = [
  'Section',
